# python-sql

./: 00_random_data.ipynb  01_SELECT.ipynb  README.md  pyproject.toml
data/: places.parquet  users.parquet  visits.parquet
src/sql_python/: __init__.py
