[project]
name = "sql-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Simon Jaricot", email = "simon.jaricot@protonmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "notebook>=7.2.2",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "duckdb>=1.1.2",
    "faker>=30.8.1",
    "pycountry>=24.6.1",
    "pyarrow>=17.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sql_python"]
